<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="@dimen/space_xxsmall"
    android:layout_marginEnd="@dimen/space_xxsmall"
    android:layout_marginTop="@dimen/space_xsmall"
    android:layout_marginBottom="@dimen/space_xsmall"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_xsmall"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="@dimen/space_xregular"
        android:elevation="@dimen/space_xxsmall">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/space_xxsmall" >

            <TextView
                android:id="@+id/idTagTextView"
                android:layout_width="@dimen/no_space"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_size_regular"
                android:text="@string/id"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/idValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/space_xsmall"
                android:paddingEnd="@dimen/no_space"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_regular"
                app:layout_constraintStart_toEndOf="@id/idTagTextView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="id 1" />

            <TextView
                android:id="@+id/nameTagTextView"
                android:layout_width="@dimen/no_space"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xsmall"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_regular"
                app:layout_constraintStart_toStartOf="@id/idTagTextView"
                app:layout_constraintTop_toBottomOf="@id/idTagTextView" />

            <TextView
                android:id="@+id/nameValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/space_xsmall"
                android:paddingEnd="@dimen/no_space"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_regular"
                app:layout_constraintStart_toEndOf="@id/nameTagTextView"
                app:layout_constraintTop_toTopOf="@id/nameTagTextView"
                tools:text="nombre 1" />

            <TextView
                android:id="@+id/descriptionTagTextView"
                android:layout_width="@dimen/no_space"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xsmall"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_regular"
                app:layout_constraintStart_toStartOf="@id/idTagTextView"
                app:layout_constraintTop_toBottomOf="@id/nameTagTextView" />

            <TextView
                android:id="@+id/descriptionValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/space_xsmall"
                android:paddingEnd="@dimen/no_space"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_regular"
                app:layout_constraintStart_toEndOf="@id/descriptionTagTextView"
                app:layout_constraintTop_toTopOf="@id/descriptionTagTextView"
                tools:text="descripción 1" />

            <TextView
                android:id="@+id/priceTagTextView"
                android:layout_width="@dimen/no_space"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xsmall"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_regular"
                app:layout_constraintStart_toStartOf="@id/idTagTextView"
                app:layout_constraintTop_toBottomOf="@id/descriptionTagTextView" />

            <TextView
                android:id="@+id/priceValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/space_xsmall"
                android:paddingEnd="@dimen/no_space"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_regular"
                app:layout_constraintStart_toEndOf="@id/priceTagTextView"
                app:layout_constraintTop_toTopOf="@id/priceTagTextView"
                tools:text="precio 1" />

            <TextView
                android:id="@+id/quantityTagTextView"
                android:layout_width="@dimen/no_space"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xsmall"
                android:text="@string/quantity"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_regular"
                app:layout_constraintStart_toStartOf="@id/idTagTextView"
                app:layout_constraintTop_toBottomOf="@id/priceTagTextView" />

            <TextView
                android:id="@+id/quantityValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/space_xsmall"
                android:paddingEnd="@dimen/no_space"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_regular"
                app:layout_constraintStart_toEndOf="@id/quantityTagTextView"
                app:layout_constraintTop_toTopOf="@id/quantityTagTextView"
                tools:text="cantidad 1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>